--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Clean UI Admin Template</title>
+  <title>Clean UI Angular Pro</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="favicon.png">
-  
+
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,700i,900" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="assets/fonts/font-icomoon/style.css">
   <link rel="stylesheet" type="text/css" href="assets/fonts/font-awesome/css/font-awesome.min.css">
@@ -27,9 +28,11 @@
   </style>
 
 </head>
+
 <body>
   <app-root>
     <div class="initial__loading"></div>
   </app-root>
 </body>
+
 </html>
