css amendments: kit_dark=>[data-kit-theme="dark"]

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-kit-theme="dark">
 
 <head>
   <meta charset="utf-8">
@@ -30,7 +30,7 @@
 
 </head>
 
-<body data-kit-theme="dark">
+<body>
   <app-root>
     <div class="initial__loading"></div>
   </app-root>
