--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-kit-theme="dark">
+<html lang="en" data-kit-theme="default">
 
 <head>
   <meta charset="utf-8">
